@@ -1,4 +1,5 @@
 0.6.0
+* dos: new module: (DateTime output stream) (2007-11-18)
 * hct: support for zero-length key
 * str: new words: str-data@,str-length!  (2007-11-14)
 * gmo: new module (Gettexts mo-file) (2007-11-12)
